Introduce compatibility with Rails 6
* Remove < 6.0 active_support dependency
* Remove 2.2, 2.3, 2.4 ruby version test
* Add 2.6 ruby version test
* Use bundler 1.17.3 in travis.yml
* Switch to 1.0.2 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,14 @@ language: ruby
 cache: bundler
 
 rvm:
-  - 2.2
-  - 2.3
-  - 2.4
   - 2.5
+  - 2.6
 
 env:
   - RAKE_ENV=test BUNDLE_PATH=vendor/bundle
 
 before_install:
-  - gem install bundler
+  - gem install bundler -v 1.17.3
 
 install:
   - bundle install
